--- a/astro-react-app/package.json
+++ b/astro-react-app/package.json
@@ -9,6 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.13.0"
+    "astro": "^5.13.0",
+    "@astrojs/react": "^4.3.0",
+    "@auth/core": "^0.37.4",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "auth-astro": "^4.2.0",
+    "daisyui": "^5.0.50",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.11"
   }
 }
